// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package org.wfa.measurement.api.v2alpha.event_templates.testing;

import "wfa/measurement/api/v2alpha/event_annotations.proto";

option java_package = "org.wfanet.measurement.api.v2alpha.event_templates.testing";
option java_multiple_files = true;

message Gender {
  option (.wfa.measurement.api.v2alpha.event_field) = {
    display_name: "Gender"
  };

  enum Value {
    GENDER_UNKOWN = 0;
    GENDER_MALE = 1;
    GENDER_FEMALE = 2;
  }
  Value value = 1;
}

message TestBannerTemplate {
  option (.wfa.measurement.api.v2alpha.event_template) = {
    name: "test_banner_template"
    display_name: "Banner Ad"
    description: "A simple Event Template for a banner ad."
  };

  Gender gender = 1;
}
